array ordenação, desafio06 e estrutura de repetição while

--- a/index.html
+++ b/index.html
@@ -49,6 +49,6 @@
     <script src="./js/eventos_formulario.js"></script>
     -->
 
-    <script src=""></script>
+    <script src="./js/repeticao_while.js"></script>
 </body>
 </html>
