desafio 07, repetição do while, for, for in, foreach, repeticao array, funcções param variaveis, tratamento erros

--- a/index.html
+++ b/index.html
@@ -49,6 +49,6 @@
     <script src="./js/eventos_formulario.js"></script>
     -->
 
-    <script src="./js/repeticao_while.js"></script>
+    <script src="./js/try_catch_finally_throw.js"></script>
 </body>
 </html>
