--- a/index.html
+++ b/index.html
@@ -49,6 +49,6 @@
     <script src="./js/eventos_formulario.js"></script>
     -->
 
-    <script src="./js/try_catch_finally_throw.js"></script>
+    <script src="./js/bom_timing.js"></script>
 </body>
-</html>
+</html>''
